# FolderSync

./: .gitignore  README.md  pyproject.toml
src/folderclone/: __init__.py  cli.py  core.py
tests/: test_core.py
