[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folderclone"
version = "0.1.0"
description = "A minimalistic file and folder synchronisation utility."
readme = "README.md"
authors = [
  { name = "Prasant Sudhakaran", email = "code@prasant.net" }
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/folderclone"

[project.scripts]
folderclone = "folderclone.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
